plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'kotlin-kapt'
    id 'dagger.hilt.android.plugin'
    id 'kotlin-parcelize'
}

android {
    namespace 'com.example.shacklehotelbuddy'
    compileSdk 34

    defaultConfig {
        applicationId "com.example.shacklehotelbuddy"
        minSdk 24
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "com.example.shacklehotelbuddy.HiltTestRunner"

        vectorDrawables {
            useSupportLibrary true
        }

        buildConfigField "String", "BASE_URL", project.BASE_URL
        buildConfigField "String", "API_KEY", project.API_KEY
        buildConfigField "String", "HOST", project.HOST

        javaCompileOptions {
            annotationProcessorOptions {
                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    kotlinOptions {
        jvmTarget = '17'
    }
    buildFeatures {
        compose true
    }
    composeOptions {
        kotlinCompilerExtensionVersion '1.3.2'
    }
    packagingOptions {
        exclude 'META-INF/DEPENDENCIES.txt'
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/NOTICE.txt'
        exclude 'META-INF/LICENSE.md'
        exclude 'META-INF/LICENSE-notice.md'
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/DEPENDENCIES'
        exclude 'META-INF/notice.txt'
        exclude 'META-INF/license.txt'
        exclude 'META-INF/dependencies.txt'
        exclude 'META-INF/LGPL2.1'
        exclude 'META-INF/*.kotlin_module'
    }
    /**
     * sharedTest directory act as bridge between unit and instrumentation tests.
     */
    sourceSets {
        androidTest {
            java.srcDirs += "src/sharedTest/java"
        }
        test {
            java.srcDirs += "src/sharedTest/java"
        }
    }

    // Always show the result of every unit test when running via command line, even if it passes.
    testOptions.unitTests {
        includeAndroidResources true
        returnDefaultValues true
    }

    tasks.withType(Test) {
        testLogging {
            events "skipped", "failed", "passed"
        }
        jvmArgs = ['-noverify','--add-opens=java.base/java.lang=ALL-UNNAMED', '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED', '--add-opens=java.base/java.util=ALL-UNNAMED']
    }
}

dependencies {
    implementation 'androidx.core:core-ktx:1.10.1'
    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
    implementation 'androidx.activity:activity-compose:1.7.2'
    implementation platform('androidx.compose:compose-bom:2023.06.01')
    implementation 'androidx.compose.ui:ui'
    implementation 'androidx.compose.ui:ui-graphics'
    implementation 'androidx.compose.ui:ui-tooling-preview'
    implementation 'androidx.compose.material3:material3'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'

    // Compose dependencies
    implementation 'androidx.navigation:navigation-compose:2.6.0'
    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"

    // Room
    implementation "androidx.room:room-runtime:2.5.2"
    implementation 'androidx.navigation:navigation-testing:2.6.0'
    kapt "androidx.room:room-compiler:2.5.2"

    // Kotlin Extensions and Coroutines support for Room
    implementation "androidx.room:room-ktx:2.5.2"

    // Retrofit
    implementation "com.squareup.retrofit2:retrofit:2.9.0"
    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
    implementation 'com.google.code.gson:gson:2.10.1'

    // Stetho
    implementation 'com.facebook.stetho:stetho:1.6.0'
    implementation 'com.facebook.stetho:stetho-okhttp3:1.6.0'

    //Glide + Glide Transformations
    def glide_version = '4.15.1'
    implementation "com.github.bumptech.glide:glide:$glide_version"
    kapt "com.github.bumptech.glide:compiler:$glide_version"
    implementation 'jp.wasabeef:glide-transformations:4.3.0'
    implementation 'com.github.bumptech.glide:compose:1.0.0-alpha.1'

    //Dagger - Hilt
    implementation 'com.google.dagger:hilt-android:2.45'
    androidTestImplementation project(path: ':app')
    kapt 'com.google.dagger:hilt-android-compiler:2.45'
    kapt "androidx.hilt:hilt-compiler:1.0.0"

    // Local unit tests
    testImplementation "androidx.test:core:1.5.0"
    testImplementation "junit:junit:4.13.2"
    testImplementation "org.robolectric:robolectric:4.10.3"
    testImplementation "androidx.arch.core:core-testing:2.2.0"
    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
    testImplementation "com.google.truth:truth:1.1.3"
    testImplementation 'com.squareup.okhttp3:mockwebserver:5.0.0-alpha.11'
    testImplementation "com.google.dagger:hilt-android-testing:2.45"
    kaptTest 'com.google.dagger:hilt-android-compiler:2.45'
    testAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.45'
    testImplementation 'org.mockito:mockito-android:5.4.0'
    testImplementation 'org.mockito:mockito-core:5.4.0'
    testImplementation 'org.mockito.kotlin:mockito-kotlin:5.0.0'
    testImplementation "org.jetbrains.kotlin:kotlin-test:1.8.0"
    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:1.8.0"
    testImplementation 'androidx.test:runner:1.5.2'


    // Instrumentation tests
    androidTestImplementation platform('androidx.compose:compose-bom:2023.06.01')
    debugImplementation 'com.google.dagger:hilt-android-testing:2.45'
    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.45'
    androidTestAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.45'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation "androidx.test.ext:junit-ktx:1.1.5"
    androidTestImplementation "junit:junit:4.13.2"
    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
    androidTestImplementation "com.google.truth:truth:1.1.3"
    //noinspection GradleDependency
    androidTestImplementation 'androidx.test:core-ktx:1.4.0'
    androidTestImplementation 'io.mockk:mockk-android:1.13.5'
    androidTestImplementation 'androidx.test:runner:1.5.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    androidTestImplementation platform('androidx.compose:compose-bom:2023.06.01')
    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'

    debugImplementation "androidx.test:core:1.5.0"
    debugImplementation 'androidx.compose.ui:ui-tooling'
    debugImplementation 'androidx.compose.ui:ui-test-manifest'
}